Remade nav to be more responsive, fixed testimonials overflowing.

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -11,6 +11,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+}
+
+.content-width {
     width: 1110px;
 }
 
@@ -93,10 +96,6 @@ color: #FFFFFF;
 
 .button-section:hover{
         background-color: black;
-    }
-
-nav {
-        max-width: 1100px;
     }
 
 .img-top {
