--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -22,6 +22,7 @@ $second-font: 'Aleo', serif;
     letter-spacing: 2.4px;
     text-transform: uppercase;
     color: #FFFFFF;
+    padding-left: 20px;
 }
 
 .logo-choose {
@@ -59,7 +60,20 @@ h4 {
     font-size: 36px;
     line-height: 26px;
     color: #E8E8E8;
+    margin-left: 10px;
+    margin-right: 10px;
 }
+
+@media screen and (max-width: 600px) {
+    h4 {
+        font-family: 'Aleo';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 26px;
+        color: #E8E8E8;
+        }
+  }
 
 .card-first {
     font-family: 'Josefin Sans';
